# trail_1

./: CMakeLists.txt  ReadMind
include/: Command.h  CreateBack.h  CreateFast.h  CreateMove.h  CreateTurn.h  Executor.h  Executorlmpl.h  Point.h  Pose.h  PoseHandler.h  StaticPoseHandler.h  hello.h
src/: CMakeLists.txt  Command.cpp  CreateBack.cpp  CreateFast.cpp  CreateMove.cpp  CreateTurn.cpp  Executor.cpp  Executorlmpl.cpp  Point.cpp  Pose.cpp  PoseHandler.cpp  StaticPoseHandler.cpp  list.cpp  list.h
tests/: CMakeLists.txt  ExecutorTest.cpp  ExecutorlmplTest.cpp  Test.cpp  test.cpp
